--- a/.github/workflows/pipeline-ecr-ebs.yml
+++ b/.github/workflows/pipeline-ecr-ebs.yml
@@ -19,8 +19,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      . . .
-      - uses: actions/upload-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           name: ebconfig
           path: |
