--- a/.github/workflows/pipeline-ecr-ebs.yml
+++ b/.github/workflows/pipeline-ecr-ebs.yml
@@ -19,6 +19,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      - run: docker build -t $MODULE_FULLNAME $MODULE_NAME
+      - run: |
+          docker tag $MODULE_FULLNAME:$TAG \
+          $REGISTRY_URL/$MODULE_FULLNAME:$TAG
+      - run: |
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin $REGISTRY_URL
+      - run: docker push $REGISTRY_URL/$MODULE_FULLNAME:$TAG
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ebconfig
+          path: |
+            frontend/.elasticbeanstalk/config.yml
+            frontend/Dockerrun.aws.json
       - uses: actions/upload-artifact@v4
         with:
           name: ebconfig
